building out components and zeit now deployment file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Slatarian Snacks</title>
+    <!-- adobe typekit with aktiv grotesq -->
+    <link rel="stylesheet" href="https://use.typekit.net/auh5hzx.css">
   </head>
   <body>
     <div id="app"></div>
