--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="./static/pretzel.png" />
     <title>Slatarian Snacks</title>
     <!-- adobe typekit with aktiv grotesq -->
     <link rel="stylesheet" href="https://use.typekit.net/auh5hzx.css">
